--- a/main.html
+++ b/main.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <title>Meu Site</title>
-        <style>
+    </head>
+<style>
             body {
                 font-family: Arial, sans-serif;
-                background-image: url(back1.jpg);
+                background-image: url(/src/back1.jpg);
                 background-size: cover;
                 background-position: center;
                 background-repeat: no-repeat;
@@ -31,7 +32,6 @@
                 flex-direction: column;
             }
         </style>
-    </head>
     <body>
         <div class="body2">
             <h1>Login</h1>
