--- a/main.html
+++ b/main.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title>Meu Site</title>
     </head>
-<style>
+        <style>
             body {
                 font-family: Arial, sans-serif;
                 background-image: url('/src/back1.jpg');
@@ -35,9 +35,12 @@
     <body>
         <div class="body2">
             <h1>Login</h1>
-            <input type="email" placeholder="Digite seu e-mail" style="margin-bottom: 20px;" />
-            <input type="password" placeholder="Digite sua senha" style="margin-bottom: 20px;" />
+            <input type="email" placeholder="Digite seu e-mail" style="margin-bottom: 20px;" name="email"/>
+            <input type="password" placeholder="Digite sua senha" style="margin-bottom: 20px;" name="senha"/>
             <button>Entrar</button>
         </div>
     </body>
 </html>
+<script>
+    
+</script>
