--- a/main.html
+++ b/main.html
@@ -30,6 +30,8 @@
                 justify-content: center;
                 padding: 20px;
                 flex-direction: column;
+                border-radius: 7px;
+                box-shadow: 20px 20px 20px rgba(0, 0, 0, 1);
             }
             .input {
                 display: block;
@@ -47,10 +49,10 @@
     <body>
         <div class="body2">
             <h1 style="transform: translateY(0px); font-size: 250%; height: 100%; width: 30%; white-space: nowrap;">Login Macaco</h1>
-            <form id="loginForm" action="" style="height: 200%;">
-                <input type="text" id="username" placeholder="Digite seu nome de usuário"required class="input"/>
+            <form method="POST" action="/login" id="loginForm" style="height: 200%;">
+                <input type="text" name="username" placeholder="Digite seu nome de usuário" required class="input"/>
                 <br>
-                <input type="password" id="password" placeholder="Digite sua senha" required class="input"/>
+                <input type="password" name="password" placeholder="Digite sua senha" required class="input"/>
                 <br>
                 <button type="submit" style="height: 5vh; margin-left: 42%; border-radius: 7px;">Logar</button>
                 <p>Não tem uma conta? <a href="/new_account.html">Crie uma</a></p>
@@ -58,16 +60,3 @@
         </div>
     </body>
 </html>
-<script>
-    document.getElementById("loginForm").addEventListener("submit", function(event) {
-        event.preventDefault();
-     username = document.getElementById("username").value
-     password = document.getElementById("password").value
-     if (username === "macaco" && password === "1234") {
-         alert("Login bem-sucedido!");
-         window.location.href = "/home.html"; // Redireciona para a página home.html
-     } else {
-         alert("Usuário ou senha incorretos.");
-     }
-    });
-</script>
