--- a/public/home.html
+++ b/public/home.html
@@ -2,6 +2,7 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="/imgs/icone.png" type="image/x-icon">
     <title>Home - Lista de Trabalhos</title>
     <style>
         body {
