--- a/public/new_account.html
+++ b/public/new_account.html
@@ -2,12 +2,13 @@
 <html lang="pt-BR">
     <head>
         <meta charset="UTF-8">
+        <link rel="icon" href="/imgs/icone.png" type="image/x-icon">
         <title>Meu Site</title>
     </head>
         <style>
             body {
                 font-family: Arial, sans-serif;
-                background-image: url('/src/back1.jpg');
+                background-image: url('/imgs/back1.jpg');
                 background-size: cover;
                 background-position: center;
                 background-repeat: no-repeat;
